--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,10 @@
 steps:
   # Run the Maven build
-  - name: gcr.io/mygcpcloudbuild/mymavengcpcloudbuild
+ 
+ #- name: gcr.io/mygcpcloudbuild/mymavengcpcloudbuild
+ - name: maven: 3.6.0-jdk-11-slim 
     entrypoint: 'mvn'
     args: ['clean', 'install', '-DskipTests']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/mygcpcloudbuildplanet', '.']
-images: ['gcr.io/$PROJECT_ID/mygcpcloudbuildplanet']
+ # - name: 'gcr.io/cloud-builders/docker'
+ #   args: ['build', '-t', 'gcr.io/$PROJECT_ID/mygcpcloudbuildplanet', '.']
+#images: ['gcr.io/$PROJECT_ID/mygcpcloudbuildplanet']
