--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,3 +2,6 @@ steps:
   - name: maven:3.6.0-jdk-11-slim
     entrypoint: 'mvn'
     args: ['clean', 'install', '-DskipTests']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/perfect-precept-292004/mygcpcloudbuildplanet', '.']
+images: ['gcr.io/perfect-precept-292004/mygcpcloudbuildplanet']
